# NeMo

./: .gitignore  CMakeLists.txt
IO/: IOStack.c  IOStack.h
neuro/: tn_neuron.c
scripts/: TNNeuron.py  TN_build.py  _tnStruct.c  build.py  get_defs.py  hdrs.csv  network_def.py  tn_neuron_bin.c  tn_neuron_bin.h  tn_neuron_spec.csv
